# always-on-ai-assistant

./: .env.sample  .gitignore  README.md  ada.sh  assistant_config.yml  check.py  main.py  main_base_assistant.py  main_cli_typer_one_shot.py  main_stt.py  main_stt_oai_text.py  main_typer_assistant.py  o1-architect-deepseek-editor.sh  pyproject.toml  report.json  scratchpad.md  scratchpad.txt  sonnet-architect.sh
commands/: template.py  template_empty.py
modules/: assistant_config.py  base_assistant.py  deepseek.py  execute_python.py  ollama.py  typer_agent.py  typer_assistant.py  utils.py
prompts/: concise-assistant-response.xml  typer-commands.xml
tests/: deepseek_test.py  execute_python_test.py
